--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -20,3 +20,12 @@ $custom-navbar-color: #ffecec;
 .navbar-custom {
   background-color: $custom-navbar-color;
 }
+
+.chapter-card {
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+
+  &:hover {
+    transform: scale(1.05); // Slightly enlarge the card
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); // Add shadow for depth
+  }
+}
