--- a/src/pages/Mistakes/Mistakes.css
+++ b/src/pages/Mistakes/Mistakes.css
@@ -1,5 +1,5 @@
 .mistakes {
-    padding-top: 80px !important; /* Bù chiều cao NavBar */
+    padding-top: 80px !important;
     padding-bottom: 30px;
 }
     
